--- a/index.html
+++ b/index.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Netlix india-Watch Tv Programmes Online,Watch Films Online</title>
     <link rel="stylesheet" type="text/css"
     href="style.css">
+    <script src="https://kit.fontawesome.com/c577d8314e.js"></script>
 </head>
 <body>
-    
+    <header class="showcase">
+        <div class="showcase-top">
+            <img src="image/download.png" id="logo">
+            <a href="#" class="btn-rounded"></a>
+        </div>
+        <div class="content">
+            <h1>See what’s next.</h1>
+            <p>WATCH ANYWHERE. CANCEL AT ANY TIME.</p>
+            <button>try 30days free ></button>
+        </div>
+    </header>
 </body>
 </html>
