--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
 <body>
     <header class="showcase">
         <div class="showcase-top">
-            <img src="image/download.png" id="logo">
-            <a href="#" class="btn-rounded"></a>
+            <img src="image/logo.png" id="logo">
+            <form>
+                <label style="color: white" for="btn">Have an account?</label>
+            <input type="button" value="Sign In." class="btn btn-rounded" id="btn"></input>
+        </form>
         </div>
-        <div class="content">
+        <div class="showcase-content">
             <h1>See what’s next.</h1>
             <p>WATCH ANYWHERE. CANCEL AT ANY TIME.</p>
-            <button>try 30days free ></button>
+            <button class="btn btn-lg">try 30days free ></button>
         </div>
     </header>
 </body>
-</html>
+</html> 
