--- a/index.html
+++ b/index.html
@@ -24,5 +24,16 @@
             <button class="btn btn-lg">try 30days free ></button>
         </div>
     </header>
+    <section class="tabs">
+        <div class="container">
+      <div class="tab-items tab-border" id="tab1">
+          <i class="door-open"></i>
+          <p>No commitments <br>
+                Cancel online at any time</p>
+      </div>
+      <div class="tab-items tab-border" id="tab2"></div>
+      <div class="tab-items tab-border" id="tab3"></div>
+    </div>
+    </section>
 </body>
 </html> 
