--- a/index.html
+++ b/index.html
@@ -24,16 +24,22 @@
             <button class="btn btn-lg">try 30days free ></button>
         </div>
     </header>
-    <section class="tabs">
-        <div class="container">
-      <div class="tab-items tab-border" id="tab1">
-          <i class="door-open"></i>
-          <p>No commitments <br>
+    <div class="tabs">
+        <div class="tabs-container">
+      <div style="padding-right: 200px" class="tab-items " id="tab1">
+          <img style="z-index: 1;" src="image/door.png" class="fas fas-door-open fa-3x"></img>
+    <p> No commitments <br>
                 Cancel online at any time</p>
       </div>
-      <div class="tab-items tab-border" id="tab2"></div>
-      <div class="tab-items tab-border" id="tab3"></div>
+      <div class="tab-items " id="tab2">
+            <img src="image/devices.png" class="tablet fa-3x" ></img>
+            <p class="hide-sm"> Watch anywhere</p>
+      </div>
+      <divp style="padding-left: 200px" class="tab-items  tab-border" id="tab3">
+            <img src="image/LogoMakr_9ZdvpF.png" class="note fa-3x"></img>
+            <p  class="hide-sm">Pick your price</p>
+      </div>
     </div>
-    </section>
+</div>
 </body>
 </html> 
